@@ -244,7 +244,7 @@ void carbonNames2Addr(s_fidoconfig *config)
            }
 
            if (!found) {
-	      if (!cb->extspawn)
+	      if (!cb->extspawn && !cb->move) 
 	              printf("Could not find area \"%s\" for carbon copy. Use BadArea\n", (config->carbons[i].areaName) ? config->carbons[i].areaName : "");
               config->carbons[i].area = &(config->badArea);
               config->carbons[i].export = 0;
